test/error/sema/assign-type-mismatch.dsk
let mut x: int = 1
x = "hello"
